[gd_scene load_steps=42 format=3 uid="uid://dextyluhrr7ge"]

[ext_resource type="Script" uid="uid://bj58wvm3q3f" path="res://Entities/Scripts/Player/player.gd" id="1_k2g5q"]
[ext_resource type="Texture2D" uid="uid://dsvvit8k8agxd" path="res://assets/Prototype_Character/Prototype_Character.png" id="2_tryav"]
[ext_resource type="FontFile" uid="uid://bgx8gu7aobui5" path="res://assets/Fonts/pixel_font.ttf" id="4_bkltx"]
[ext_resource type="PackedScene" uid="uid://2n45pwc32vf8" path="res://UI/Scenes/HeatBar/heat_bar.tscn" id="6_0s0i4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2fnmh"]
atlas = ExtResource("2_tryav")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yau1e"]
atlas = ExtResource("2_tryav")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_miuxl"]
atlas = ExtResource("2_tryav")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s0i4"]
atlas = ExtResource("2_tryav")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3me7o"]
atlas = ExtResource("2_tryav")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82va7"]
atlas = ExtResource("2_tryav")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tbdt"]
atlas = ExtResource("2_tryav")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy3dh"]
atlas = ExtResource("2_tryav")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iln5i"]
atlas = ExtResource("2_tryav")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgnei"]
atlas = ExtResource("2_tryav")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3owp"]
atlas = ExtResource("2_tryav")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uvkj"]
atlas = ExtResource("2_tryav")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljvlh"]
atlas = ExtResource("2_tryav")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_73upb"]
atlas = ExtResource("2_tryav")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mim1d"]
atlas = ExtResource("2_tryav")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b07ci"]
atlas = ExtResource("2_tryav")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3h7h"]
atlas = ExtResource("2_tryav")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jegjl"]
atlas = ExtResource("2_tryav")
region = Rect2(96, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_u5v5l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fnmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yau1e")
}],
"loop": true,
"name": &"Down_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_miuxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s0i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3me7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82va7")
}],
"loop": true,
"name": &"Down_Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tbdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy3dh")
}],
"loop": true,
"name": &"Right_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iln5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgnei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3owp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uvkj")
}],
"loop": true,
"name": &"Right_Run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljvlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_73upb")
}],
"loop": true,
"name": &"Up_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mim1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b07ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3h7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jegjl")
}],
"loop": true,
"name": &"Up_Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_miuxl"]
size = Vector2(12, 7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3yag"]
bg_color = Color(0.027451, 0.027451, 0.0392157, 0.941176)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0.831373, 0.882353, 0.384314)
border_blend = true
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.34902)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="Gradient" id="Gradient_6ye3u"]
colors = PackedColorArray(0.101961, 0.101961, 0.141176, 1, 0.156863, 0.156863, 0.219608, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_32g0p"]
gradient = SubResource("Gradient_6ye3u")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_r3mkj"]
offsets = PackedFloat32Array(0, 0.503937, 1)
colors = PackedColorArray(0, 0.741176, 0.992157, 1, 0.101961, 0.737255, 0.611765, 1, 0.992157, 0.843137, 0.0117647, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qyga8"]
gradient = SubResource("Gradient_r3mkj")
fill_from = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnpjl"]
bg_color = Color(0.0588235, 0.0588235, 0.0784314, 0.843137)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.176471, 0.176471, 0.25098, 0.588235)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Gradient" id="Gradient_particle"]
offsets = PackedFloat32Array(0, 0.4, 1)
colors = PackedColorArray(0, 1, 0.431373, 1, 0.545098, 1, 0.498039, 0.686275, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6jnyx"]
gradient = SubResource("Gradient_particle")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8mwo1"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(150, 30, 1)
direction = Vector3(0, -1, 0)
spread = 30.0
initial_velocity_min = 20.0
initial_velocity_max = 80.0
gravity = Vector3(0, -50, 0)
scale_min = 2.0
scale_max = 4.0
color_ramp = SubResource("GradientTexture1D_6jnyx")

[sub_resource type="Animation" id="Animation_dw1a5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackgroundPanel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BackgroundPanel:border_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.831373, 0.882353, 0.384314)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("IconContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Shine:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_q3d6f"]
resource_name = "appear"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(0.5, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.8), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(0.287175, 1.86607, 0.5, 1),
"update": 0,
"values": [Vector2(0, 20), Vector2(15, 20), Vector2(22, 20), Vector2(20, 20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BackgroundPanel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.784314), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IconContainer:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1.5, 1.5, 1.5, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.6),
"transitions": PackedFloat32Array(0.5, 1.86607, 0.5, 1),
"update": 0,
"values": [Vector2(0.95, 0.95), Vector2(1.05, 1.05), Vector2(1.02, 1.02), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Shine:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.392157), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_complete"]
resource_name = "complete"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundPanel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.8),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Color(0, 0.831373, 0.882353, 0.384314), Color(0.105882, 0.796078, 0.0941176, 0.898039), Color(0.105882, 0.796078, 0.0941176, 0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IconContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1.2, 1.2, 1.2, 1), Color(0.6, 1.4, 0.6, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IconContainer/Icon:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["!", "✓"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Shine:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.5, 0.8),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Color(0.105882, 0.796078, 0.0941176, 0), Color(0.105882, 0.796078, 0.0941176, 0.6), Color(0.105882, 0.796078, 0.0941176, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(0.98, 0.98), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TitleLabel:text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": ["CURRENT OBJECTIVE", "OBJECTIVE COMPLETE"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TitleLabel:theme_override_colors/font_color")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.831373, 0.882353, 1), Color(0.105882, 0.796078, 0.0941176, 1)]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CompletionParticles")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}

[sub_resource type="Animation" id="Animation_x8qrm"]
resource_name = "disappear"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(20, 20), Vector2(0, 20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IconContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 0.95)]
}

[sub_resource type="Animation" id="Animation_5vpfx"]
resource_name = "pulse"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackgroundPanel:border_color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0.831373, 0.882353, 0.384314), Color(0.992157, 0.356863, 0.690196, 0.384314), Color(0, 0.831373, 0.882353, 0.384314)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shine:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.5, 2),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.196078), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r12uo"]
_data = {
&"RESET": SubResource("Animation_dw1a5"),
&"appear": SubResource("Animation_q3d6f"),
&"complete": SubResource("Animation_complete"),
&"disappear": SubResource("Animation_x8qrm"),
&"pulse": SubResource("Animation_5vpfx")
}

[sub_resource type="LabelSettings" id="LabelSettings_82va7"]
font = ExtResource("4_bkltx")
font_size = 18

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_k2g5q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u5v5l")
animation = &"Down_Idle"
frame_progress = 0.345761

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1, 2)
shape = SubResource("RectangleShape2D_miuxl")

[node name="Camera2D" type="Camera2D" parent="."]
physics_interpolation_mode = 1
zoom = Vector2(3, 3)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ObjectiveLabel" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 115.0

[node name="BackgroundPanel" type="Panel" parent="CanvasLayer/ObjectiveLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_o3yag")

[node name="Background" type="TextureRect" parent="CanvasLayer/ObjectiveLabel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_32g0p")

[node name="Shine" type="ColorRect" parent="CanvasLayer/ObjectiveLabel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="IconContainer" type="TextureRect" parent="CanvasLayer/ObjectiveLabel"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 58.0
offset_bottom = 58.0
texture = SubResource("GradientTexture2D_qyga8")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Icon" type="Label" parent="CanvasLayer/ObjectiveLabel/IconContainer"]
texture_filter = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.301961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 32
text = "!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TitleLabel" type="Label" parent="CanvasLayer/ObjectiveLabel"]
texture_filter = 4
layout_mode = 0
offset_left = 67.0
offset_top = 16.0
offset_right = 341.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.105882, 0.796078, 0.0941176, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.603922)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 16
text = "OBJECTIVE TO COMPLETE"
vertical_alignment = 1

[node name="ContentPanel" type="Panel" parent="CanvasLayer/ObjectiveLabel"]
layout_mode = 0
offset_left = 68.0
offset_top = 42.0
offset_right = 340.0
offset_bottom = 98.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dnpjl")

[node name="ObjectiveText" type="RichTextLabel" parent="CanvasLayer/ObjectiveLabel/ContentPanel"]
texture_filter = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.4)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/normal_font = ExtResource("4_bkltx")
theme_override_font_sizes/normal_font_size = 19
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="CompletionParticles" type="GPUParticles2D" parent="CanvasLayer/ObjectiveLabel"]
position = Vector2(170, 80)
emitting = false
amount = 30
lifetime = 1.2
one_shot = true
explosiveness = 0.8
randomness = 0.3
process_material = SubResource("ParticleProcessMaterial_8mwo1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ObjectiveLabel"]
libraries = {
&"": SubResource("AnimationLibrary_r12uo")
}
autoplay = "appear"

[node name="PulseAnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ObjectiveLabel"]
libraries = {
&"": SubResource("AnimationLibrary_r12uo")
}
autoplay = "pulse"

[node name="HeatBar" parent="CanvasLayer" instance=ExtResource("6_0s0i4")]
visible = false
offset_left = 813.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = -533.0

[node name="DebugLabel" type="Label" parent="CanvasLayer"]
visible = false
self_modulate = Color(1, 1, 1, 0.54902)
offset_left = 20.0
offset_top = 125.0
offset_right = 60.0
offset_bottom = 165.0
theme_override_fonts/font = ExtResource("4_bkltx")
label_settings = SubResource("LabelSettings_82va7")
vertical_alignment = 1
